# rust-fontawesome

./: .copier-answers.yml  Cargo.toml  README.md  build.rs  crates.js  deny.toml  justfile  search-index.js  settings.html  source-files.js
.github/workflows/: continuous-integration.yml  continuous_integration.yml  github_pages.yml
examples/: hello.rs
fontawesome/: all.html  constant.CHAR_500_PX.html  constant.CHAR_ACCESSIBLE_ICON.html  constant.CHAR_ACCUSOFT.html  constant.CHAR_ACQUISITIONS_INCORPORATED.html  constant.CHAR_AD.html  constant.CHAR_ADDRESS_BOOK.html  constant.CHAR_ADDRESS_CARD.html  constant.CHAR_ADJUST.html  constant.CHAR_ADN.html  constant.CHAR_ADVERSAL.html  constant.CHAR_AFFILIATETHEME.html  constant.CHAR_AIRBNB.html  constant.CHAR_AIR_FRESHENER.html  constant.CHAR_ALGOLIA.html  constant.CHAR_ALIGN_CENTER.html  constant.CHAR_ALIGN_JUSTIFY.html  constant.CHAR_ALIGN_LEFT.html  constant.CHAR_ALIGN_RIGHT.html  constant.CHAR_ALIPAY.html  constant.CHAR_ALLERGIES.html  constant.CHAR_AMAZON.html  constant.CHAR_AMAZON_PAY.html  constant.CHAR_AMBULANCE.html  constant.CHAR_AMERICAN_SIGN_LANGUAGE_INTERPRETING.html  constant.CHAR_AMILIA.html  constant.CHAR_ANCHOR.html  constant.CHAR_ANDROID.html  constant.CHAR_ANGELLIST.html  constant.CHAR_ANGLE_DOUBLE_DOWN.html  constant.CHAR_ANGLE_DOUBLE_LEFT.html  constant.CHAR_ANGLE_DOUBLE_RIGHT.html  constant.CHAR_ANGLE_DOUBLE_UP.html  constant.CHAR_ANGLE_DOWN.html  constant.CHAR_ANGLE_LEFT.html  constant.CHAR_ANGLE_RIGHT.html  constant.CHAR_ANGLE_UP.html  constant.CHAR_ANGRY.html  constant.CHAR_ANGRYCREATIVE.html  constant.CHAR_ANGULAR.html  (+1432 more)
fontawesome/char/: constant.ACCESSIBLE_ICON.html  constant.ACCUSOFT.html  constant.ACQUISITIONS_INCORPORATED.html  constant.AD.html  constant.ADDRESS_BOOK.html  constant.ADDRESS_CARD.html  constant.ADJUST.html  constant.ADN.html  (+1452 more)
src/: error.rs  icon.rs  icon.rs.tera  lib.rs  lib.rs.tera  plan.rs  version.rs  version.rs.tera
tests/: icon.rs  test.rs  version.rs
(+34 files in other folders)
