[package]
name = "fontawesome"
version = "0.1.0"
edition = "2021"
description = "The Font Awesome icon set for Rust."
repository = "https://github.com/vivienm/rust-fontawesome"
documentation = "https://vivienm.github.io/rust-fontawesome/docs/fontawesome/"
license = "MIT"

[features]
default = ["std"]
std = []

[build-dependencies]
anyhow = "1.0.75"
convert_case = "0.6.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tera = { version = "1.15.0", default-features = false }
tokio = { version = "1.34.0", features = ["macros"] }
